--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -22,4 +22,4 @@ html(lang="en")
                     select#cameras
                     video#peerFace(autoplay, playsinline, width="400", height="400")
         script(src="/socket.io/socket.io.js")
-        script(src="/public/js/app.js")
+        script(type="module" src="/public/js/app.js")
